@@ -4,6 +4,11 @@ Revision history for Perl extension SADI.
     * Copied SADI::SADI to SADI
     * UniqueID, ServiceURI and SignatureURL default to Service URL
       if they are not defined.
+    * updated Makefile.PL to include OWL2Perl (code excised from this
+      module and placed into a new separate module to more modularize
+      the codebase)
+    * updated the sadi-generate-datatypes.pl script to use the new 
+      OWL2Perl codebase. Whole script was re-written.
     
 
 0.99.5
